--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
 </head>
-<body>
-    
+<body class="flex-column min-100-vh text-center">
+    <header id="weather-heading" class="hero">
+        <h1 class="text-light">Weather Dashboard</h1>
+    </header>
+
+    <main class="flex-row justify-space-between ps-3 pe-3">
+        <div class="col col-md-3 ">
+            <div class="border-bottom border-info border-2 pb-2">
+                <div class="d-grid gap-2 col-12 pb-2">
+                <h3 class="">Search for a City:</h3>
+                <form id="city-form" class= col-12>
+                    <input placeholder="City Name" name="city" id="city" type="text" autofocus="true" class="form-input" />
+                </form>
+                </div>
+                <div class="d-grid gap-2 col-12 mx-auto pd-2">
+                     <button type="submit" class="btn btn-info">Search</button>
+                </div>
+                <div id="city-container" class="list-group"></div>
+            </div>
+        </div>
+    </main>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
