--- a/index.html
+++ b/index.html
@@ -1,34 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body class="flex-column min-100-vh text-center">
     <header id="weather-heading" class="hero">
         <h1 class="text-light">Weather Dashboard</h1>
     </header>
 
-    <main class="flex-row justify-space-between ps-3 pe-3">
-        <div class="col col-md-3 ">
-            <div class="border-bottom border-info border-2 pb-2">
-                <div class="d-grid gap-2 col-12 pb-2">
-                <h3 class="">Search for a City:</h3>
-                <form id="city-form" class= col-12>
-                    <input placeholder="City Name" name="city" id="city" type="text" autofocus="true" class="form-input" />
-                </form>
+    <main class=" containter flex-row justify-space-between ps-3 pe-3">
+        <div class="row">
+            <div class="col col-md-3 ">
+                <div class=" border-info border-2 pb-2">
+                    <div class="border-bottom d-grid gap-2 col-12 pb-2">
+                        <h3 class="">Search for a City:</h3>
+                        <form id="city-form" class=col-12>
+                            <input placeholder="City Name" name="city" id="city" type="text" autofocus="true"
+                                class="form-input" />
+                        </form>
+                    </div>
+                    <div class="d-grid gap-2 col-12 mx-auto pd-2">
+                        <button id="citySearch" type="submit" class="btn btn-info">Search</button>
+                    </div>
+                    <div id="city-container" class="list-group d-grid gap-2 col-12 mx-auto pd-2">
+                    </div>
                 </div>
-                <div class="d-grid gap-2 col-12 mx-auto pd-2">
-                     <button type="submit" class="btn btn-info">Search</button>
+            </div>
+            <div class=" col col-md-9">
+                <div class=" results row " id="dailyForecast">
                 </div>
-                <div id="city-container" class="list-group"></div>
             </div>
         </div>
+
+
+
+
+        <div id="5-day-forecast" class="col col-md-9 justify-content-end">
+
+        </div>
+        </div>
+        <div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+        integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
